apply updates add panda-ta for indicators
