# manifest/openapi.json
@@ -17,6 +17,30 @@
             "schema":{
               "type":"string"
             }
+          },
+          {
+            "description": "The timeframe to get candles for",
+            "in": "query",
+            "name": "timeframe",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "default": "1h",
+              "enum": [
+                "1m",
+                "5m",
+                "15m",
+                "30m",
+                "1h",
+                "3h",
+                "6h",
+                "12h",
+                "1D",
+                "7D",
+                "14D",
+                "1M"
+              ]
+            }
           }
         ],
         "responses":{
@@ -144,7 +168,7 @@
         ],
         "responses":{
           "200":{
-            "description":"OK",
+            "description":"The analysis of the symbol based on the indicators",
             "content":{
               "application/json":{
                 "schema":{
